# nyxa

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  PROGRESS.md  README.md  REGISTRY.md
.claude/agents/: action-executor.md  action-planner.md
crates/jarvis-app/: Cargo.toml  tauri.conf.json
crates/jarvis-app/capabilities/: default.json
crates/jarvis-app/src/: main.rs
crates/jarvis-app/ui/: index.html
crates/jarvis-cli/: Cargo.toml
crates/jarvis-cli/src/: main.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: audit.rs  clap_wake.rs  dialog.rs  engine.rs  exec.rs  kill.rs  lib.rs  llm.rs  mic.rs  registry.rs  tts.rs  vad.rs  wake.rs
crates/wake-spike/: Cargo.toml
crates/wake-spike/src/: main.rs
docs/: index.html
registry/: actions.toml
scripts/: assistant_update.ps1  close_app.ps1  close_window.ps1  fetch_models.ps1  file_delete.ps1  spotify_play.ps1
